--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -26,7 +27,6 @@
     "pretier": "^0.0.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
-
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-native": "0.74.1",
